--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -1,7 +1,7 @@
 [View]
 # the views will be tried in this order, if one fails to import, the next
 # is tried
-View=DistUpgradeViewGtk,DistUpgradeViewGtk3,DistUpgradeViewKDE,DistUpgradeViewText
+View=DistUpgradeViewGtk3,DistUpgradeViewGtk,DistUpgradeViewKDE,DistUpgradeViewText
 #View=DistUpgradeViewNonInteractive
 #Depends= python-apt (>= 0.6.0), apt (>= 0.6)
 # the views below support upgrades over ssh connection
