--- a/debian/control
+++ b/debian/control
@@ -37,7 +37,7 @@ Depends: ${python:Depends}, ${misc:Depends},
          python-aptdaemon.gtk3widgets (>= 0.40) | synaptic, 
          gksu,
          python-dbus,
-         python-gobject (>= 2.28.6-2),
+         python-gi,
          gir1.2-vte-2.90, 
          gir1.2-gtk-3.0,
 Recommends: software-properties-gtk (>= 0.71.2), 
