Re-integrate the Python 3 Computer Janitor refactoring branch for now.  The code itself lives in ~computer-janitor-hackers/computer-janitor/py3refactor and will eventually be ripped out of here, but for now, this unblocks other folks.
Still getting test failures in `bzr bd -S` though.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -38,24 +38,35 @@ update-manager-text
 do-release-upgrade
 check-new-release-gtk
 ubuntu-support-status
-Janitor/computerjanitor/cruft.py
-Janitor/computerjanitor/cruft_tests.py
-Janitor/computerjanitor/exc.py
-Janitor/computerjanitor/exc_tests.py
-Janitor/computerjanitor/file_cruft.py
-Janitor/computerjanitor/file_cruft_tests.py
-Janitor/computerjanitor/__init__.py
-Janitor/computerjanitor/package_cruft.py
-Janitor/computerjanitor/package_cruft_tests.py
-Janitor/computerjanitor/plugin.py
-Janitor/computerjanitor/plugin_tests.py
-Janitor/computerjanitor/missing_package_cruft.py
-Janitor/computerjanitor/missing_package_cruft_tests.py
-Janitor/plugins/deb_plugin.py
-Janitor/plugins/deb_plugin_tests.py
-Janitor/plugins/dpkg_status_plugin.py
-Janitor/plugins/dpkg_status_plugin_tests.py
-Janitor/plugins/kdelibs4to5_plugin.py
-Janitor/plugins/langpack_manual_plugin.py
-Janitor/plugins/remove_lilo_plugin.py
-
+janitor/plugincore/cruft.py
+janitor/plugincore/docs/__init__.py
+janitor/plugincore/testing/helpers.py
+janitor/plugincore/testing/__init__.py
+janitor/plugincore/exceptions.py
+janitor/plugincore/core/file_cruft.py
+janitor/plugincore/core/missing_package_cruft.py
+janitor/plugincore/core/package_cruft.py
+janitor/plugincore/core/__init__.py
+janitor/plugincore/plugin.py
+janitor/plugincore/__init__.py
+janitor/plugincore/manager.py
+janitor/plugincore/i18n.py
+janitor/plugincore/plugins/langpack_manual_plugin.py
+janitor/plugincore/plugins/kdelibs4to5_plugin.py
+janitor/plugincore/plugins/dpkg_status_plugin.py
+janitor/plugincore/plugins/deb_plugin.py
+janitor/plugincore/plugins/__init__.py
+janitor/plugincore/plugins/remove_lilo_plugin.py
+janitor/plugincore/tests/test_dpkg_status_plugin.py
+janitor/plugincore/tests/test_file_cruft.py
+janitor/plugincore/tests/test_missing_package_cruft.py
+janitor/plugincore/tests/__init__.py
+janitor/plugincore/tests/test_documentation.py
+janitor/plugincore/tests/test_package_cruft.py
+janitor/plugincore/tests/test_manager.py
+janitor/plugincore/tests/test_deb_plugin.py
+janitor/plugincore/tests/data/bravo_plugin.py
+janitor/plugincore/tests/data/__init__.py
+janitor/plugincore/tests/data/alpha_plugin.py
+janitor/plugincore/tests/data/charlie_plugin.py
+janitor/__init__.py
