Convert the last use of os.popen to subprocess.check_output, which makes it easier to read str rather than bytes.  (This requires Python 2.7.)

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: gnome
 Priority: optional
 Maintainer: Michael Vogt <michael.vogt@ubuntu.com>
 Build-Depends: debhelper (>= 7.0.50~), 
-               python-all-dev,
+               python-all-dev (>= 2.7),
                python-distutils-extra (>= 1.90), 
                python-apt (>= 0.8.0),
                lsb-release,
@@ -14,7 +14,7 @@ Build-Depends-Indep: libxml-parser-perl,
                      intltool
 Standards-Version: 3.8.0
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-core-dev/update-manager/main
-X-Python-Version: >= 2.6
+X-Python-Version: >= 2.7
 
 Package: update-manager-core
 Architecture: any
