--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-core-dev/update-manager/main
 X-Python-Version: >= 2.7
 
 Package: update-manager-core
-Architecture: any
+Architecture: all
 Section: admin
 Depends: ${python:Depends}, 
          ${misc:Depends}, 
