--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,8 @@ Build-Depends: debhelper (>= 7.0.50~),
                python-all-dev (>= 2.7),
                python-distutils-extra (>= 1.90), 
                python-apt (>= 0.8.0),
+               python3-all-dev,
+               python3-distutils-extra,
                lsb-release,
                ubuntu-drivers-common [i386 amd64], 
                apt-clone
@@ -15,13 +17,14 @@ Build-Depends-Indep: libxml-parser-perl,
 Standards-Version: 3.8.0
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-core-dev/update-manager/main
 X-Python-Version: >= 2.7
+X-Python3-Version: >= 3.0
 
 Package: update-manager-core
 Architecture: all
 Section: admin
 Depends: ${python:Depends}, 
          ${misc:Depends}, 
-         python-apt (>= 0.8.0),
+         python-update-manager,
          lsb-release
 Recommends: libpam-modules (>= 1.0.1-9ubuntu3)
 Replaces: update-manager (<< 1:0.146.2)
@@ -29,6 +32,30 @@ Breaks: update-manager (<< 1:0.146.2),
         computer-janitor (<= 1.11-0ubuntu1)
 Description: manage release upgrades
  This is the core of update-manager and the release upgrader
+
+Package: python-update-manager
+Architecture: all
+Section: admin
+Depends: ${python:Depends}, 
+         ${misc:Depends}, 
+         python-apt (>= 0.8.0),
+         lsb-release
+Description: 
+ Python modules for update-manager (DistUpgrade, UpdateManager).
+ .
+ This package contains the python 2.x version of these modules.
+
+Package: python3-update-manager
+Architecture: all
+Section: admin
+Depends: ${python3:Depends}, 
+         ${misc:Depends}, 
+         python-apt (>= 0.8.0),
+         lsb-release
+Description: 
+ Python modules for update-manager (DistUpgrade, UpdateManager).
+ .
+ This package contains the python 2.x version of these modules.
 
 Package: update-manager
 Architecture: all
