--- a/debian/control
+++ b/debian/control
@@ -36,11 +36,13 @@ Description: manage release upgrades
 Package: python-update-manager
 Architecture: all
 Section: admin
+Replaces: update-manager (<< 1:0.163)
+Breaks: update-manager (<< 1:0.163)
 Depends: ${python:Depends}, 
          ${misc:Depends}, 
          python-apt (>= 0.8.0),
          lsb-release
-Description: 
+Description: python 2.x module for update-manager
  Python modules for update-manager (DistUpgrade, UpdateManager).
  .
  This package contains the python 2.x version of these modules.
@@ -48,14 +50,16 @@ Description:
 Package: python3-update-manager
 Architecture: all
 Section: admin
-Depends: ${python3:Depends}, 
-         ${misc:Depends}, 
-         python-apt (>= 0.8.0),
+Replaces: update-manager (<< 1:0.163)
+Breaks: update-manager (<< 1:0.163)
+Depends: ${python3:Depends},
+         ${misc:Depends},
+         python3-apt,
          lsb-release
-Description: 
+Description: python 3.x module for update-manager
  Python modules for update-manager (DistUpgrade, UpdateManager).
  .
- This package contains the python 2.x version of these modules.
+ This package contains the python 3.x version of these modules.
 
 Package: update-manager
 Architecture: all
