Use the right package name for replaces/breaks

--- a/debian/control
+++ b/debian/control
@@ -36,8 +36,8 @@ Description: manage release upgrades
 Package: python-update-manager
 Architecture: all
 Section: admin
-Replaces: update-manager (<< 1:0.163)
-Breaks: update-manager (<< 1:0.163)
+Replaces: update-manager-core (<< 1:0.163)
+Breaks: update-manager-core (<< 1:0.163)
 Depends: ${python:Depends}, 
          ${misc:Depends}, 
          python-apt (>= 0.8.0),
@@ -50,8 +50,8 @@ Description: python 2.x module for update-manager
 Package: python3-update-manager
 Architecture: all
 Section: admin
-Replaces: update-manager (<< 1:0.163)
-Breaks: update-manager (<< 1:0.163)
+Replaces: update-manager-core (<< 1:0.163)
+Breaks: update-manager-core (<< 1:0.163)
 Depends: ${python3:Depends},
          ${misc:Depends},
          python3-apt,
