--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Michael Vogt <michael.vogt@ubuntu.com>
 Build-Depends: debhelper (>= 7.0.50~), 
                python-all-dev (>= 2.7),
                python-distutils-extra (>= 1.90), 
-               python-apt (>= 0.8.0),
+               python-apt (>= 0.8.5~),
                python3-all-dev,
                python3-distutils-extra,
                lsb-release,
@@ -40,7 +40,7 @@ Replaces: update-manager-core (<< 1:0.163)
 Breaks: update-manager-core (<< 1:0.163)
 Depends: ${python:Depends}, 
          ${misc:Depends}, 
-         python-apt (>= 0.8.0),
+         python-apt (>= 0.8.5~),
          lsb-release
 Description: python 2.x module for update-manager
  Python modules for update-manager (DistUpgrade, UpdateManager).
@@ -54,7 +54,7 @@ Replaces: update-manager-core (<< 1:0.163)
 Breaks: update-manager-core (<< 1:0.163)
 Depends: ${python3:Depends},
          ${misc:Depends},
-         python3-apt,
+         python3-apt (>= 0.8.5~),
          lsb-release
 Description: python 3.x module for update-manager
  Python modules for update-manager (DistUpgrade, UpdateManager).
