Move from -all-dev to -all python packages as we no longer build binaries

--- a/debian/control
+++ b/debian/control
@@ -3,10 +3,10 @@ Section: gnome
 Priority: optional
 Maintainer: Michael Vogt <michael.vogt@ubuntu.com>
 Build-Depends: debhelper (>= 7.0.50~), 
-               python-all-dev (>= 2.7),
+               python-all (>= 2.7),
                python-distutils-extra (>= 1.90), 
                python-apt (>= 0.8.5~),
-               python3-all-dev,
+               python3-all,
                python3-distutils-extra,
                lsb-release,
                ubuntu-drivers-common [i386 amd64], 
