--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Build-Depends: debhelper (>= 7.0.50~),
                python3-distutils-extra,
                lsb-release,
                ubuntu-drivers-common [i386 amd64], 
-               apt-clone (>= 0.2.2ubuntu1~)
+               apt-clone (>= 0.2.3~ubuntu1)
 Build-Depends-Indep: libxml-parser-perl, 
                      scrollkeeper, 
                      intltool
