Make update-manager-kde depend on psmisc, for killall.

--- a/debian/control
+++ b/debian/control
@@ -97,7 +97,8 @@ Depends: ${python:Depends},
          ${misc:Depends}, 
          update-manager-core, 
          python-kde4, 
-         kdesudo
+         kdesudo,
+         psmisc
 Description: Support modules for Muon Notifier and Apper
  Support modules for Muon Notifier and Apper to check for new distro releases 
  and download the dist-upgrade tool.
