--- a/debian/control
+++ b/debian/control
@@ -35,7 +35,7 @@ Description: manage release upgrades
 
 Package: python-update-manager
 Architecture: all
-Section: admin
+Section: python
 Replaces: update-manager-core (<< 1:0.163)
 Breaks: update-manager-core (<< 1:0.163)
 Depends: ${python:Depends}, 
@@ -49,7 +49,7 @@ Description: python 2.x module for update-manager
 
 Package: python3-update-manager
 Architecture: all
-Section: admin
+Section: python
 Replaces: update-manager-core (<< 1:0.163)
 Breaks: update-manager-core (<< 1:0.163)
 Depends: ${python3:Depends},
