Ignore temporary packaging files.

--- a/.bzrignore
+++ b/.bzrignore
@@ -1,1 +1,11 @@
 __pycache__
+debian/*.debhelper*
+debian/*.substvars
+debian/files
+debian/python-update-manager
+debian/python3-update-manager
+debian/tmp
+debian/update-manager
+debian/update-manager-core
+debian/update-manager-kde
+debian/update-manager-text
