split package into python-* modules too

--- a/debian/control
+++ b/debian/control
@@ -3,52 +3,71 @@ Section: admin
 Priority: optional
 Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 Build-Depends: debhelper (>= 9), 
-               python-all,
+               python-all (>= 2.7),
                python-distutils-extra (>= 1.90), 
-               python-apt (>= 0.7.5),
+               python-apt (>= 0.8.5~),
+               python3-all,
+               python3-distutils-extra, 
+               python3-apt (>= 0.8.5~),
                lsb-release,
                ubuntu-drivers-common [i386 amd64], 
-               apt-clone
+               apt-clone (>= 0.2.3~ubuntu1)
 Build-Depends-Indep: libxml-parser-perl, 
                      scrollkeeper, 
                      intltool
 Standards-Version: 3.9.3
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-core-dev/ubuntu-release-upgrader/trunk
-X-Python-Version: >= 2.6
+X-Python-Version: >= 2.7
 
 Package: ubuntu-release-upgrader-core
 Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${python:Depends},
-         ${misc:Depends},
-         python-apt (>= 0.7.13.4ubuntu3),
-         lsb-release,
-         update-manager
+Depends: ${misc:Depends}
 Recommends: libpam-modules (>= 1.0.1-9ubuntu3)
 Replaces: update-manager (<< 1:0.163),
           update-manager-core (<< 1:0.163)
 Breaks: update-manager (<< 1:0.163),
-        update-manager-core (<< 1:0.163),
-        computer-janitor (<= 1.11-0ubuntu1)
+        update-manager-core (<< 1:0.163)
 Description: manage release upgrades
  This is the core of the Ubuntu Release Upgrader
 
-Package: ubuntu-release-upgrader-gtk
+Package: python-distupgrade
 Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${python:Depends},
          ${misc:Depends},
          ubuntu-release-upgrader-core,
-         python
+         python-apt (>= 0.8.5~),
+         lsb-release
+Replaces: update-manager-core (<< 1:0.163)
+Breaks: update-manager-core (<< 1:0.163)
+Description: manage release upgrades
+ This is the DistUpgrade Python 2 module
+
+Package: python3-distupgrade
+Architecture: all
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${python3:Depends},
+         ${misc:Depends},
+         ubuntu-release-upgrader-core,
+         python3-apt (>= 0.8.5~),
+         lsb-release
+Description: manage release upgrades
+ This is the DistUpgrade Python 3 module
+
+Package: ubuntu-release-upgrader-gtk
+Architecture: all
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${python3:Depends},
+         ${misc:Depends},
+         python3-distupgrade
 Description: manage release upgrades
  This is the GTK+ frontend of the Ubuntu Release Upgrader
 
 Package: ubuntu-release-upgrader-qt
 Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${python:Depends},
-         ${misc:Depends},
-         ubuntu-release-upgrader-core,
+Depends: ${misc:Depends},
          python-kde4, 
          kdesudo
 Description: manage release upgrades
