--- a/debian/control
+++ b/debian/control
@@ -3,9 +3,6 @@ Section: admin
 Priority: optional
 Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 Build-Depends: debhelper (>= 9), 
-               python-all (>= 2.7),
-               python-distutils-extra (>= 1.90), 
-               python-apt (>= 0.8.5~),
                python3-all,
                python3-distutils-extra, 
                python3-apt (>= 0.8.5~),
@@ -17,12 +14,13 @@ Build-Depends-Indep: libxml-parser-perl,
                      intltool
 Standards-Version: 3.9.3
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-core-dev/ubuntu-release-upgrader/trunk
-X-Python-Version: >= 2.7
+X-Python3-Version: >= 3.2
 
 Package: ubuntu-release-upgrader-core
 Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${misc:Depends}
+Depends: ${misc:Depends},
+         python3-distupgrade
 Recommends: libpam-modules (>= 1.0.1-9ubuntu3)
 Replaces: update-manager (<< 1:0.163),
           update-manager-core (<< 1:0.163)
@@ -30,19 +28,6 @@ Breaks: update-manager (<< 1:0.163),
         update-manager-core (<< 1:0.163)
 Description: manage release upgrades
  This is the core of the Ubuntu Release Upgrader
-
-Package: python-distupgrade
-Architecture: all
-Pre-Depends: ${misc:Pre-Depends}
-Depends: ${python:Depends},
-         ${misc:Depends},
-         ubuntu-release-upgrader-core,
-         python-apt (>= 0.8.5~),
-         lsb-release
-Replaces: update-manager-core (<< 1:0.163)
-Breaks: update-manager-core (<< 1:0.163)
-Description: manage release upgrades
- This is the DistUpgrade Python 2 module
 
 Package: python3-distupgrade
 Architecture: all
@@ -68,6 +53,7 @@ Package: ubuntu-release-upgrader-qt
 Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends},
+         ubuntu-release-upgrader-core,
          python-kde4, 
          kdesudo
 Description: manage release upgrades
