APTURL TESTING ONLY
Moved UpdateManager/backend to the python*-update-manager packages

--- a/debian/control
+++ b/debian/control
@@ -36,10 +36,10 @@ Description: manage release upgrades
 Package: python-update-manager
 Architecture: all
 Section: python
-Replaces: update-manager-core (<< 1:0.163)
-Breaks: update-manager-core (<< 1:0.163)
+Replaces: update-manager-core (<< 1:0.163~ppa0)
+Breaks: update-manager-core (<< 1:0.163~ppa0)
 Depends: ${python:Depends}, 
-         ${misc:Depends}, 
+         ${misc:Depends},
          python-apt (>= 0.8.5~),
          lsb-release
 Description: python 2.x module for update-manager
@@ -50,8 +50,8 @@ Description: python 2.x module for update-manager
 Package: python3-update-manager
 Architecture: all
 Section: python
-Replaces: update-manager-core (<< 1:0.163)
-Breaks: update-manager-core (<< 1:0.163)
+Replaces: update-manager-core (<< 1:0.163~ppa0)
+Breaks: update-manager-core (<< 1:0.163~ppa0)
 Depends: ${python3:Depends},
          ${misc:Depends},
          python3-apt (>= 0.8.5~),
