--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,8 @@ X-Python3-Version: >= 3.2
 Package: update-manager-core
 Architecture: all
 Section: admin
-Depends: ${misc:Depends}, 
+Depends: ${python:Depends},
+         ${misc:Depends}, 
          python3-update-manager,
          lsb-release
 Recommends: libpam-modules (>= 1.0.1-9ubuntu3)
