${python3:Depends} in u-m-core, not ${python:Depends}

--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ X-Python3-Version: >= 3.2
 Package: update-manager-core
 Architecture: all
 Section: admin
-Depends: ${python:Depends},
+Depends: ${python3:Depends},
          ${misc:Depends}, 
          python3-update-manager,
          lsb-release
