--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Architecture: all
 Section: admin
 Depends: ${python3:Depends},
          ${misc:Depends}, 
-         python3-update-manager,
+         python3-update-manager (= ${source:Version}),
          lsb-release
 Recommends: libpam-modules (>= 1.0.1-9ubuntu3)
 Replaces: update-manager (<< 1:0.146.2)
