Moved UpdateManager/backend and UpdateManager/UnitySupport.py to the python*-update-manager packages for apturl.
(removed cruft from previous commit)

--- a/debian/control
+++ b/debian/control
@@ -36,8 +36,8 @@ Description: manage release upgrades
 Package: python-update-manager
 Architecture: all
 Section: python
-Replaces: update-manager-core (<< 1:0.163~ppa0)
-Breaks: update-manager-core (<< 1:0.163~ppa0)
+Replaces: update-manager-core (<< 1:0.163)
+Breaks: update-manager-core (<< 1:0.163)
 Depends: ${python:Depends}, 
          ${misc:Depends},
          python-apt (>= 0.8.5~),
@@ -50,8 +50,8 @@ Description: python 2.x module for update-manager
 Package: python3-update-manager
 Architecture: all
 Section: python
-Replaces: update-manager-core (<< 1:0.163~ppa0)
-Breaks: update-manager-core (<< 1:0.163~ppa0)
+Replaces: update-manager-core (<< 1:0.163)
+Breaks: update-manager-core (<< 1:0.163)
 Depends: ${python3:Depends},
          ${misc:Depends},
          python3-apt (>= 0.8.5~),
