--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 7.0.50~),
                python3-all,
                python3-distutils-extra,
                lsb-release,
-               ubuntu-drivers-common [i386 amd64], 
+               ubuntu-drivers-common (>= 1:0.2.55) [i386 amd64], 
                apt-clone (>= 0.2.3~ubuntu1)
 Build-Depends-Indep: libxml-parser-perl, 
                      scrollkeeper, 
