--- a/debian/rules
+++ b/debian/rules
@@ -5,6 +5,12 @@ DIST=$(shell lsb_release -c -s)
 DEBVER=$(shell LC_ALL=C dpkg-parsechangelog |sed -n -e '/^Version:/s/^Version: //p' | sed s/.*://)
 TARNAME=dist-upgrader_$(DEBVER)_$(ARCH).tar.gz
 DH_ARGS=--with=python2,python3
+PY3REQUESTED := $(shell py3versions -r)
+PY3DEFAULT := $(shell py3versions -d)
+# Run setup.py with the default python3 last so that the scripts use
+# #!/usr/bin/python3 and not #!/usr/bin/python3.X.
+PY3 := $(filter-out $(PY3DEFAULT),$(PY3REQUESTED)) python3
+
 %:
 	dh $@ $(DH_ARGS)
 
@@ -29,12 +35,12 @@ binary-indep:
 
 override_dh_auto_build:
 	dh_auto_build
-	set -ex; for python in $(shell py3versions -r); do \
+	set -ex; for python in $(PY3); do \
 		$$python setup.py build; \
 	done
 
 override_dh_auto_install:
 	dh_auto_install
-	set -ex; for python in $(shell py3versions -r); do \
+	set -ex; for python in $(PY3); do \
 		$$python setup.py install --root=$(CURDIR)/debian/tmp --install-layout=deb; \
 	done
