debian/control: unset myself as Maintainer, this is a group project now

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: update-manager
 Section: gnome
 Priority: optional
-Maintainer: Michael Vogt <michael.vogt@ubuntu.com>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 Build-Depends: debhelper (>= 7.0.50~), 
                python-all (>= 2.7),
                python-distutils-extra (>= 1.90), 
