Depend on python3-update-manager and update-manager as appropriate

--- a/debian/control
+++ b/debian/control
@@ -36,6 +36,7 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends: ${python3:Depends},
          ${misc:Depends},
          ubuntu-release-upgrader-core (= ${source:Version}),
+         python3-update-manager,
          python3-apt (>= 0.8.5~),
          lsb-release
 Description: manage release upgrades
@@ -47,6 +48,7 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends: ${python3:Depends},
          ${misc:Depends},
          ubuntu-release-upgrader-core (= ${source:Version}),
+         update-manager,
          python3-distupgrade (= ${source:Version}),
          python3-dbus,
          python3-gi,
