add DistUpgradeFetcher code and related bits to this package instead of update-manager

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,15 +4,20 @@ DistUpgrade/dist-upgrade.py
 DistUpgrade/DistUpgradeAptCdrom.py
 DistUpgrade/DistUpgradeCache.py
 DistUpgrade/DistUpgradeController.py
+DistUpgrade/DistUpgradeFetcher.py
+DistUpgrade/DistUpgradeFetcherCore.py
+DistUpgrade/DistUpgradeFetcherKDE.py
 DistUpgrade/DistUpgradeQuirks.py
 DistUpgrade/DistUpgradeMain.py
 DistUpgrade/DistUpgradeViewGtk.py
 DistUpgrade/DistUpgradeViewGtk3.py
 DistUpgrade/DistUpgradeViewKDE.py
 DistUpgrade/DistUpgradeView.py
-DistUpgrade/DistUpgradeFetcherCore.py
 DistUpgrade/DistUpgradeViewText.py
-[type: gettext/glade]DistUpgrade/DistUpgrade.ui
+DistUpgrade/ReleaseNotesViewer.py
+DistUpgrade/ReleaseNotesViewerWebkit.py
+[type: gettext/glade]data/gtkbuilder/DistUpgrade.ui
+[type: gettext/glade]data/gtkbuilder/ReleaseNotes.ui
 [type: gettext/glade]data/gtkbuilder/UpgradePromptDialog.ui
 do-release-upgrade
 check-new-release-gtk
