add do-dist-upgrade and move some config files so we can pass it --data-dir

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -21,5 +21,6 @@ DistUpgrade/ReleaseNotesViewerWebkit.py
 [type: gettext/glade]data/gtkbuilder/DistUpgrade.ui
 [type: gettext/glade]data/gtkbuilder/ReleaseNotes.ui
 [type: gettext/glade]data/gtkbuilder/UpgradePromptDialog.ui
+do-dist-upgrade
 do-release-upgrade
 check-new-release-gtk
