--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -21,6 +21,6 @@ DistUpgrade/ReleaseNotesViewerWebkit.py
 [type: gettext/glade]data/gtkbuilder/DistUpgrade.ui
 [type: gettext/glade]data/gtkbuilder/ReleaseNotes.ui
 [type: gettext/glade]data/gtkbuilder/UpgradePromptDialog.ui
-do-dist-upgrade
+do-partial-upgrade-gtk
 do-release-upgrade
 check-new-release-gtk
