make do-partial-upgrade more generic (not just gtk) and add policy kit file to provide nice text for the sudo prompt

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -21,6 +21,7 @@ DistUpgrade/ReleaseNotesViewerWebkit.py
 [type: gettext/glade]data/gtkbuilder/DistUpgrade.ui
 [type: gettext/glade]data/gtkbuilder/ReleaseNotes.ui
 [type: gettext/glade]data/gtkbuilder/UpgradePromptDialog.ui
+[type: gettext/xml]data/com.ubuntu.release-upgrader.policy.in
 do-partial-upgrade
 do-release-upgrade
 check-new-release-gtk
