--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [build_i18n]
 domain=ubuntu-release-upgrader
+xml-files=[("share/polkit-1/actions", ["data/com.ubuntu.release-upgrader.policy.in"]),]
 
 [sdist]
 formats = bztar
