correct a typo in the python3-pykde4 Depends

--- a/debian/control
+++ b/debian/control
@@ -63,7 +63,7 @@ Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends},
          ubuntu-release-upgrader-core (= ${source:Version}),
-         python3-kde4, 
+         python3-pykde4, 
          kdesudo,
          psmisc
 Description: manage release upgrades
