use nosetests3 for tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,9 @@ xml-files=[("share/polkit-1/actions", ["data/com.ubuntu.release-upgrader.policy.
 
 [sdist]
 formats = bztar
+
+[nosetests]
+match=^test
+with-coverage=1
+cover-erase=1
+cover-package=DistUpgrade
