run nosetests3 as a dep8 test

--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Build-Depends-Indep: libxml-parser-perl,
                      intltool
 Standards-Version: 3.9.3
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-core-dev/ubuntu-release-upgrader/trunk
+XS-Testsuite: autopkgtest
 X-Python3-Version: >= 3.2
 
 Package: ubuntu-release-upgrader-core
