--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: debhelper (>= 9),
                python3-apt (>= 0.8.5~),
                lsb-release,
                ubuntu-drivers-common (>= 1:0.2.55) [i386 amd64], 
+               python3-update-manager,
                apt-clone (>= 0.2.3~ubuntu1)
 Build-Depends-Indep: libxml-parser-perl, 
                      scrollkeeper, 
