Add replaces/breaks onto old update-manager-kde

--- a/debian/control
+++ b/debian/control
@@ -68,5 +68,7 @@ Depends: ${misc:Depends},
          python3-pykde4, 
          kdesudo,
          psmisc
+Replaces: update-manager-kde (<< 1:0.165)
+Breaks: update-manager-kde (<< 1:0.165)
 Description: manage release upgrades
  This is the Qt frontend of the Ubuntu Release Upgrader
