Declare Breaks/Replaces from python3-distupgrade to old versions of python3-update-manager (LP: #1020229).

--- a/debian/control
+++ b/debian/control
@@ -41,6 +41,8 @@ Depends: ${python3:Depends},
          python3-update-manager,
          python3-apt (>= 0.8.5~),
          lsb-release
+Replaces: python3-update-manager (<< 1:0.165)
+Breaks: python3-update-manager (<< 1:0.165)
 Description: manage release upgrades
  This is the DistUpgrade Python 3 module
 
