--- a/data/removal_blacklist.cfg
+++ b/data/removal_blacklist.cfg
@@ -12,7 +12,7 @@ ubuntu-release-upgrader
 # posgresql (LP: #871893)
 ^postgresql-.*[0-9]\.[0-9].*
 # the upgrade runs in it
-screen
+^screen$
 # unity
 unity$
 unity-2d$
