debian/ubuntu-release-upgrader-core.preinst: modify /etc/dist-upgrader/release-upgrades to use Prompt instead of prompt thereby avoiding a conffile prompt (LP: #1045579)

--- a/debian/control
+++ b/debian/control
@@ -28,7 +28,8 @@ Recommends: libpam-modules (>= 1.0.1-9ubuntu3)
 Replaces: update-manager (<< 1:0.165),
           update-manager-core (<< 1:0.165)
 Breaks: update-manager (<< 1:0.165),
-        update-manager-core (<< 1:0.165)
+        update-manager-core (<< 1:0.165),
+        software-properties (<< 0.9.27)
 Description: manage release upgrades
  This is the core of the Ubuntu Release Upgrader
 
