--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,2 +1,2 @@
 Tests: nose-tests
-Depends: @, gir1.2-webkit-3.0, python3-mock, python3-nose, xvfb
+Depends: @, gir1.2-webkit-3.0, python3-mock, python3-nose, xvfb, python3-apport
