--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -40,7 +40,7 @@ Types=386,ec2,generic,rt,server,virtual
 
 # information about the individual meta-pkgs
 [ubuntu-desktop]
-KeyDependencies=gdm, ubuntu-artwork, ubuntu-sounds
+KeyDependencies=unity, ubuntu-artwork, ubuntu-sounds
 # those pkgs will be marked remove right after the distUpgrade in the cache
 PostUpgradeRemove=xscreensaver, gnome-cups-manager, powermanagement-interface, deskbar-applet, nautilus-cd-burner
 ForcedObsoletes=desktop-effects, cups-pdf, gnome-app-install, policykit-gnome, gnome-mount
