updated to support raring upgrades

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -34,13 +34,13 @@ BadVersions=blcr-dkms_0.8.2-13
 #SlideshowUrl=http://people.canonical.com/~mvo/ubiquity-slideshow-upgrade/slides/
 
 [KernelRemoval]
-Version=3.2.0
+Version=3.5.0
 BaseNames=linux-image,linux-headers,linux-image-debug,linux-backport-modules,linux-header-lbm
 Types=386,ec2,generic,rt,server,virtual
 
 # information about the individual meta-pkgs
 [ubuntu-desktop]
-KeyDependencies=unity, ubuntu-artwork, ubuntu-sounds
+KeyDependencies=lightdm, unity, ubuntu-artwork, ubuntu-sounds
 # those pkgs will be marked remove right after the distUpgrade in the cache
 PostUpgradeRemove=xscreensaver, gnome-cups-manager, powermanagement-interface, deskbar-applet, nautilus-cd-burner
 ForcedObsoletes=desktop-effects, cups-pdf, gnome-app-install, policykit-gnome, gnome-mount
@@ -81,8 +81,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=precise
-To=quantal
+From=quantal
+To=raring
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
