Remove cups-pdf from ForcedObsoletes in DistUpgrade.cfg (LP: #457221)

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -43,13 +43,13 @@ Types=386,ec2,generic,rt,server,virtual
 KeyDependencies=lightdm, unity, ubuntu-artwork, ubuntu-sounds
 # those pkgs will be marked remove right after the distUpgrade in the cache
 PostUpgradeRemove=xscreensaver, gnome-cups-manager, powermanagement-interface, deskbar-applet, nautilus-cd-burner
-ForcedObsoletes=desktop-effects, cups-pdf, gnome-app-install, policykit-gnome, gnome-mount
+ForcedObsoletes=desktop-effects, gnome-app-install, policykit-gnome, gnome-mount
 
 [kubuntu-desktop]
 KeyDependencies=kdm, kubuntu-artwork
 PostUpgradeRemove=powermanagement-interface, guidance-power-manager, kde-guidance-powermanager
 # those packages are marked as obsolete right after the upgrade
-ForcedObsoletes=ivman, cups-pdf, gtk-qt-engine
+ForcedObsoletes=ivman, gtk-qt-engine
 
 [kubuntu-netbook]
 KeyDependencies=kdm, kubuntu-netbook-default-settings
@@ -60,7 +60,6 @@ KeyDependencies=gdm, ubuntu-netbook-default-settings
 [xubuntu-desktop]
 KeyDependencies=xubuntu-artwork, xubuntu-default-settings, xfwm4
 PostUpgradeRemove=notification-daemon
-ForcedObsoletes=cups-pdf
 
 [ubuntustudio-desktop]
 KeyDependencies=ubuntustudio-default-settings, ubuntustudio-look
